--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,13 +1,10 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -25,4 +22,12 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test ./PlayStudios.MyService/
+    - name: Publish
+      run: dotnet publish ./PlayStudios.MyService/PlayStudios.MyService.WebApi/ \ -c Release \ -o ./dist
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: API
+        path: PlayStudios.MyService/API/**
+        if-no-files-found: error
