--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Test
       run: dotnet test ./PlayStudios.MyService/
     - name: Publish
-      run: dotnet publish ./PlayStudios.MyService/PlayStudios.MyService.WebApi/ \ -c Release \ -o ./dist
+      run: dotnet publish ./PlayStudios.MyService/PlayStudios.MyService.WebApi/PlayStudios.MyService.WebApi.csproj \ -c Release \ -o ./dist
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3
       with:
