--- a/PlayStudios.MyService/PlayStudios.MyService.WebApi/PlayStudios.MyService.WebApi.csproj
+++ b/PlayStudios.MyService/PlayStudios.MyService.WebApi/PlayStudios.MyService.WebApi.csproj
@@ -4,5 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+  <ProjectReference Include="..\PlayStudios.MyService.WebApi\PlayStudios.MyService.WebApi.csproj" />
+    </ItemGroup>
 
 </Project>
