--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,11 +22,9 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test ..\PlayStudios.MyService.WebApi\PlayStudios.MyService.WebApi.csproj
+      run: dotnet test ./PlayStudios.MyService/PlayStudios.MyService.WebApi.Tests/PlayStudios.MyService.WebApi.Tests.csproj
     - name: Publish
-      run: dotnet publish ..\PlayStudios.MyService.WebApi\PlayStudios.MyService.WebApi.csproj
-            -c Release 
-            -o ./dist
+      run: dotnet publish ./PlayStudios.MyService/PlayStudios.MyService.WebApi/PlayStudios.MyService.WebApi.csproj -c Release  -o ./dist
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3
       with:
