--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,7 +18,8 @@ jobs:
       with:
         dotnet-version: '7.0.x'
     - name: Restore dependencies
-      run: dotnet restore -s ./
+      run: dotnet restore -s ./PlayStudios.MyService
+/PlayStudios.MyService.WebApi/
     - name: Build
       run: dotnet build --no-restore
     - name: Test
