--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,8 +18,7 @@ jobs:
       with:
         dotnet-version: '7.0.x'
     - name: Restore dependencies
-      run: dotnet restore -s ./PlayStudios.MyService
-/PlayStudios.MyService.WebApi/
+      run: dotnet restore -s ./PlayStudios.MyService/PlayStudios.MyService.WebApi/
     - name: Build
       run: dotnet build --no-restore
     - name: Test
