--- a/.github/workflows/bdPSdotnet.yml
+++ b/.github/workflows/bdPSdotnet.yml
@@ -23,10 +23,7 @@ jobs:
     - name: Test
       run: dotnet test ./PlayStudios.MyService/
     - name: Publish
-      run: dotnet publish \ 
-             ./PlayStudios.MyService/PlayStudios.MyService.WebApi/ \
-             -c Release \
-             -o ./dist
+      run: dotnet publish ./PlayStudios.MyService/PlayStudios.MyService.WebApi/ -c Release -o ./dist
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3
       with:
