--- a/.github/workflows/bdPSdotnet.yml
+++ b/.github/workflows/bdPSdotnet.yml
@@ -22,11 +22,17 @@ jobs:
         dotnet-version: 7.0.x
     - name: Test
       run: dotnet test ./PlayStudios.MyService/
-    - name: Publish
-      run: dotnet publish ./PlayStudios.MyService/PlayStudios.MyService.WebApi/ -c Release -o ./dist
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v3
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Build and push
+      uses: docker/build-push-action@v2
       with:
-        name: demoapi
-        path: ./dist/**
-        if-no-files-found: error
+          push: false
+          context: .
+          tag: "test_image:latest"
+          load: true
+    - name: Upload image
+      uses: ishworkh/docker-image-artifact-upload@v1.0.0
+      with:
+        image: "test_image:latest"
