--- a/.github/workflows/bdPSdotnet.yml
+++ b/.github/workflows/bdPSdotnet.yml
@@ -16,20 +16,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 7.0.x
     - name: Test
       run: dotnet test ./PlayStudios.MyService/
-    - name: Set up Docker Buildx
-      id: buildx
-      uses: docker/setup-buildx-action@v1
     - name: Build and push
-      uses: docker/build-push-action@v2
+      uses: docker/build-push-action@v3
       with:
         push: false
-        context: .
+        context: ./PlayStudios.MyService/PlayStudios.MyService.WebApi
         tag: "test_image:latest"
         load: true
     - name: Upload image
