--- a/.github/workflows/bdPSdotnet.yml
+++ b/.github/workflows/bdPSdotnet.yml
@@ -23,10 +23,10 @@ jobs:
       with:
         push: false
         context: ./PlayStudios.MyService/PlayStudios.MyService.WebApi
-        tag: "test_image:latest"
+        tag: "demoapi:latest"
         load: true
     - name: Upload image
       uses: ishworkh/docker-image-artifact-upload@v2.0.1
       with:
-        image: "test_image:latest"
+        image: "demoapi:latest"
         retention_days: "2"
