--- a/.github/workflows/bdPSdotnet.yml
+++ b/.github/workflows/bdPSdotnet.yml
@@ -18,15 +18,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Test
       run: dotnet test ./PlayStudios.MyService/
-    - name: Build and push
+    - name: Build only
       uses: docker/build-push-action@v3
       with:
         push: false
         context: ./PlayStudios.MyService/PlayStudios.MyService.WebApi
-        tag: "demoapi:latest"
-        load: true
-    - name: Upload image
-      uses: ishworkh/docker-image-artifact-upload@v2.0.1
-      with:
-        image: "demoapi:latest"
-        retention_days: "2"
+
